Revision history for {{$dist->name}}

{{$NEXT}}
 - Fix args to internal method (Fixes GH#53)
   (Thanks Alastair McGowan-Douglas!)
 - Allow schema versions to be version objects (Fixes GH#51)
   (Good find Jonathan Scott Duff!)

0.002219  2017-03-19 21:15:19-07:00 America/Los_Angeles
 - Fix typo in docs (Thanks Aaron Crane) (Fixes GH#49)
 - Fix spelling mistake in POD (Thanks Stefan Hornburg!)
 - Add links to ::Intro from the docs (Thanks Martin Renvoize!)

0.002218  2015-10-31 16:35:26-07:00 America/Los_Angeles
 - Fix spelling mistake in POD (Thanks Gregor Herrmann!)

0.002217  2015-10-04 15:05:01-07:00 America/Los_Angeles
 - Document Custom Script Helper pattern

0.002216  2015-06-14 09:34:57-07:00 America/Los_Angeles
 - Use Pod::Weaver::Plugin::Ditaa to render diagram

0.002215  2015-01-10 13:58:10-06:00 America/Chicago
 - Improve documentation for how to portably create indices
   (Thanks Meredith Howard for the ideas!)

0.002214  2014-12-21 11:53:20-06:00 America/Chicago
 - Fix inconsistency of what files get run when `ignore_ddl` is set.
   To be clear, if in the past you generated DDL and *also* hand wrote DDL,
   `ignore_ddl` would ignore both, though the intention was only to ignore
   generated DDL.
   (Thanks Lianna Eeftinck for very detailed bug report at GH#20!)
 - Include the filename of the script being run in case of error
 - Add some documentation for how to portably create indices
 - Fix doc bug stating that install calls initialize
   (Thanks Gavin Shelley! Fixes GH#13)
 - Minor Pod Fixes (Thanks Renee B and Pär Karlsson!)

0.002213  2014-12-03 08:44:10-06:00 America/Chicago
 - Fix some POD formatting

0.002212  2014-10-11 15:04:22-05:00 America/Chicago
 - Add some nice documentation on overall structure

0.002211  2014-05-15 20:06:48-05:00 America/Chicago
  - Fix some missing ABSTRACTs (Fixes GH#22, thanks Gregor Herrmann!)

0.002210  2014-01-31 09:35:27 America/Chicago
  - Make source order stable to avoid non-changes in git (fixes RT#92580)